<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.carlt.yema.ui.activity.login.DeviceBindActivity">

    <include layout="@layout/layout_title"
        android:id="@+id/device_bind_title_bar"/>

    <ImageView
        android:id="@+id/bind_logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@mipmap/device_bind_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />


    <EditText
        android:id="@+id/car_vin_code"
        style="@style/usercenter_edit1"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_input_bg"
        android:maxLength="17"
        android:digits="@string/vin_filter_string"
        android:gravity="center_vertical"
        android:hint="@string/usercenter_vin_code" />

    <TextView
        android:id="@+id/btn_select_car"
        style="@style/usercenter_edit1"
        android:textColor="@color/text_color_gray1"
        android:layout_height="50dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="8dp"
        android:text="@string/_car_select_type"
        android:gravity="center_vertical"
        android:background="@drawable/login_input_bg"
        android:drawableRight="@mipmap/arrow_right" />

    <TextView
        android:id="@+id/bind_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:text="@string/device_bind_tx"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/black"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
