<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context="com.carlt.yema.ui.activity.setting.PhoneAuthenticationActivity">
    <include layout="@layout/layout_title" />
    <EditText
        android:id="@+id/certified_phone_input"
        style="@style/usercenter_edit1"
        android:background="@drawable/login_input_bg"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:layout_marginBottom="0dp"
        android:hint="@string/certified_code_input_txt"
        android:inputType="number"
        android:maxLength="11"/>
    <LinearLayout
        style="@style/login_input_bg"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/certified_code_input"
            style="@style/usercenter_edit1"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:hint="@string/usercenter_hint_validate"
            android:inputType="number"
            android:maxLength="6"/>
        <TextView
            android:id="@+id/certified_verification_send"
            android:layout_width="80dip"
            android:layout_height="30dip"
            android:gravity="center"
            android:text="@string/usercenter_push_validate"
            android:textColor="@color/black"
            android:layout_marginRight="10dip"
            android:background="@drawable/verification_send_bg"
            android:textSize="14sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vertified_code_get_tip"
        android:layout_marginTop="39dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/text_color_gray1"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/certified_input_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:text="@string/ok"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/black"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
