<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:id="@+id/edit_person_avatar"
        style="@style/setting_page_item_style"
        android:layout_height="79dp"
        android:layout_marginTop="10dp"
        android:background="@color/setting_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avatar_txt"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/usr_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/default_avater" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/setting_item_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/edit_person_nickname"
            style="@style/setting_page_item_style"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname_txt"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/person_nickname_txt"
                style="@style/setting_subpage_item_content"
                android:text="@string/user_name_default" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/arrow_right" />
        </LinearLayout>

        <View style="@style/setting_page_item_divider" />

        <LinearLayout
            android:id="@+id/edit_person_sex"
            style="@style/setting_page_item_style"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_sex_txt"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/person_sex_txt"
                style="@style/setting_subpage_item_content"
                android:text="@string/person_sex_default_txt" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/arrow_right" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>