<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context=".ui.activity.login.ActivateBindActivity">
    <include layout="@layout/layout_title" />

    <include
        android:id="@+id/activate_sub_head"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        layout="@layout/head_sub_normal" />
    <ImageView
        android:id="@+id/activate_bind_logo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@mipmap/activate_bind_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginTop="36dip"
        android:text="@string/device_activate_tip"
        />

    <TextView
        android:id="@+id/activate_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:text="@string/device_activate_tx"
        android:layout_marginTop="75dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/black"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
