<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context=".ui.activity.setting.ResetLoginPasswdActivity">
    <include layout="@layout/layout_title" />
    <EditText
        android:id="@+id/verification_passwd_phone"
        style="@style/usercenter_edit1"
        android:background="@drawable/login_input_bg"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:layout_marginBottom="0dp"
        android:hint="@string/usercenter_hint_phone1"
        android:inputType="number"
        android:maxLength="11"/>
    <LinearLayout
        style="@style/login_input_bg"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/verification_passwd_vcode_input"
            style="@style/usercenter_edit1"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:hint="@string/usercenter_hint_validate"
            android:inputType="number|textPhonetic"
            android:digits="0123456789"
            android:maxLength="6"/>
        <TextView
            android:id="@+id/verification_passwd_code_send"
            android:layout_width="80dip"
            android:layout_height="30dip"
            android:gravity="center"
            android:text="@string/usercenter_push_validate"
            android:textColor="@color/black"
            android:layout_marginRight="10dip"
            android:background="@drawable/verification_send_bg"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        style="@style/login_input_bg"
        android:layout_marginTop="10dip">

        <EditText
            android:id="@+id/verification_new_passwd_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/usercenter_edit1"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:background="@null"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:hint="@string/usercenter_hint_phone2"
            android:inputType="textPassword"
            android:maxLength="32" />

        <ImageView
            android:id="@+id/verification_new_passwd_input_toggle"
            android:layout_width="25dp"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"
            android:layout_height="25dp"
            android:tag="off"
            android:src="@mipmap/passwd_off" />
    </LinearLayout>
    <LinearLayout

        style="@style/login_input_bg"
        android:layout_marginTop="10dip">

        <EditText
            android:id="@+id/verification_new_passwd_again_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/usercenter_edit1"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:background="@null"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:hint="@string/usercenter_hint_password_reset"
            android:inputType="textPassword"
            android:maxLength="32" />

        <ImageView
            android:id="@+id/verification_new_passwd_input_again_toggle"
            android:layout_width="25dp"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"
            android:layout_height="25dp"
            android:tag="off"
            android:src="@mipmap/passwd_off" />
    </LinearLayout>
    <TextView
        android:id="@+id/verification_reset_passwd_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:text="@string/edit_commit"
        android:layout_marginTop="33dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/black"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
