<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="286dp"
    android:layout_height="159dp"
    android:gravity="center_horizontal"
    android:background="@drawable/clean_cache_dialog_bg"
    android:orientation="vertical">
    <TextView
        android:text="@string/cache_clean_tips"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:textColor="@color/main_page_linear_border"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_page_linear_border"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/clean_cache_cancel"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/dialog_btn_font_color"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/main_page_linear_border"/>
        <TextView
            android:id="@+id/clean_cache_confirm"
            android:text="@string/clean_cache_txt"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/dialog_btn_font_color"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
