<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context="com.carlt.yema.ui.activity.setting.ResetRemotePasswdActivity">
    <include
        layout="@layout/layout_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/old_remote_passwd_txt"/>
    <com.carlt.yema.ui.view.PasswordView
        android:id="@+id/reset_old_remote_passwd"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:passwordLength="6"
        app:borderColor="@color/setting_item_divider_bg"
        app:mode="rect"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_remote_passwd_txt"/>
    <com.carlt.yema.ui.view.PasswordView
        android:id="@+id/reset_new_remote_passwd"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        app:passwordLength="6"
        app:borderColor="@color/setting_item_divider_bg"
        app:mode="rect"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_remote_passwd_again_txt"/>
    <com.carlt.yema.ui.view.PasswordView
        android:id="@+id/reset_new_remote_passwd_again"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
        app:passwordLength="6"
        app:borderColor="@color/setting_item_divider_bg"
        app:mode="rect"/>
    <TextView
        android:id="@+id/reset_remote_commit"
        style="@style/public_bottom_btn"
        android:layout_height="44dp"
        android:text="@string/edit_commit"
        android:layout_marginTop="49dip"
        android:layout_marginLeft="12dip"
        android:textColor="@color/black"
        android:layout_marginRight="12dip"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
